Make dynamic popup

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="styles.css" />
-
   </head>
   <body>
     <div class="container">
@@ -59,34 +58,20 @@
         <div class="popup">
           <div class="popup-details">
             <span class="close">X</span>
-            <img
-              src="./utils/images/Snapshoot Portfolio.png"
-              alt="Snapshoot-of-portfolio"
-            />
+            <img class="project-img" />
             <div class="title-btns">
-              <h4 class="popup-title ">Keeping track of hundreds of components</h4>
+              <h4 class="popup-title"></h4>
               <div class="project-btns">
-                <button class="btn">See Life<span class="fa fa-check-square-o"></span></button>
-                <button class="btn">See Source<span class="fa fa-github"></span></button>
+                <button id="see-live-btn" class="btn">
+                  See Life<span class="fa fa-check-square-o"></span>
+                </button>
+                <button id="source-btn" class="btn">
+                  See Source<span class="fa fa-github"></span>
+                </button>
               </div>
             </div>
-            <ul class="techs-used">
-              <li class="tech">CodeKit</li>
-              <li class="tech">Github</li>
-              <li class="tech">JavaScript</li>
-              <li class="tech">Bootstrap</li>
-              <li class="tech">Codepen</li>
-            </ul>
-            <p class="details-para">
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text
-              ever since the 1500s, when an unknown printer took a galley of
-              type and scrambled it 1960s with the releaLorem Ipsum is simply
-              dummy text of the printing and typesetting industry. Lorem Ipsum
-              has been the industry's standard dummy text ever since the 1500s,
-              when an unknown printer took a galley of type and scrambled it
-              1960s with the relea
-            </p>
+            <ul class="techs-used"></ul>
+            <p class="details-para"></p>
           </div>
         </div>
       </section>
@@ -205,12 +190,10 @@ Enter text here</textarea
       </footer>
     </div>
     <script type="module" src="./script.js"></script>
-
   </body>
 </html>
 
-
-          <!-- <div class="projectCard">
+<!-- <div class="projectCard">
             <div class="cardTop"></div>
             <div class="cardBottom">
               <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
