Seperate between btns in popup in both views

--- a/index.html
+++ b/index.html
@@ -72,6 +72,14 @@
             </div>
             <ul class="techs-used"></ul>
             <p class="details-para"></p>
+            <div class="project-btns-forMob">
+              <button id="see-live-btn" class="btn">
+                See Life<span class="fa fa-check-square-o"></span>
+              </button>
+              <button id="source-btn" class="btn">
+                See Source<span class="fa fa-github"></span>
+              </button>
+            </div>
           </div>
         </div>
       </section>
