--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <p class="details-para"></p>
             <div class="project-btns-forMob">
               <button id="see-live-btn" class="btn">
-                See Life<span class="fa fa-check-square-o"></span>
+                See Live<span class="fa fa-check-square-o"></span>
               </button>
               <button id="source-btn" class="btn">
                 See Source<span class="fa fa-github"></span>
@@ -200,82 +200,3 @@ Enter text here</textarea
     <script type="module" src="./script.js"></script>
   </body>
 </html>
-
-<!-- <div class="projectCard">
-            <div class="cardTop"></div>
-            <div class="cardBottom">
-              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
-              <ul class="techs">
-                <li class="tech">Ruby on Rails</li>
-                <li class="tech">CSS</li>
-                <li class="tech">Javascript</li>
-                <li class="tech">html</li>
-              </ul>
-              <button class="btn open-popup"  id="project-1">See Project</button>
-            </div>
-          </div>
-          <div class="projectCard">
-            <div class="cardTop"></div>
-            <div class="cardBottom">
-              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
-              <ul class="techs">
-                <li class="tech">Ruby on Rails</li>
-                <li class="tech">CSS</li>
-                <li class="tech">Javascript</li>
-                <li class="tech">html</li>
-              </ul>
-              <button class="btn open-popup">See Project</button>
-            </div>
-          </div>
-          <div class="projectCard">
-            <div class="cardTop"></div>
-            <div class="cardBottom">
-              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
-              <ul class="techs">
-                <li class="tech">Ruby on Rails</li>
-                <li class="tech">CSS</li>
-                <li class="tech">Javascript</li>
-                <li class="tech">html</li>
-              </ul>
-              <button class="btn open-popup">See Project</button>
-            </div>
-          </div>
-          <div class="projectCard">
-            <div class="cardTop"></div>
-            <div class="cardBottom">
-              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
-              <ul class="techs">
-                <li class="tech">Ruby on Rails</li>
-                <li class="tech">CSS</li>
-                <li class="tech">Javascript</li>
-                <li class="tech">html</li>
-              </ul>
-              <button class="btn open-popup">See Project</button>
-            </div>
-          </div>
-          <div class="projectCard">
-            <div class="cardTop"></div>
-            <div class="cardBottom">
-              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
-              <ul class="techs">
-                <li class="tech">Ruby on Rails</li>
-                <li class="tech">CSS</li>
-                <li class="tech">Javascript</li>
-                <li class="tech">html</li>
-              </ul>
-              <button class="btn open-popup">See Project</button>
-            </div>
-          </div>
-          <div class="projectCard">
-            <div class="cardTop"></div>
-            <div class="cardBottom">
-              <h2 class="cardTitle">Multi-Post Stories Gain+Glory</h2>
-              <ul class="techs">
-                <li class="tech">Ruby on Rails</li>
-                <li class="tech">CSS</li>
-                <li class="tech">Javascript</li>
-                <li class="tech">html</li>
-              </ul>
-              <button class="btn open-popup">See Project</button>
-            </div> 
-          </div> -->
