Navigate popup btns

--- a/index.html
+++ b/index.html
@@ -62,21 +62,21 @@
             <div class="title-btns">
               <h4 class="popup-title"></h4>
               <div class="project-btns">
-                <button id="see-live-btn" class="btn">
-                  See Life<span class="fa fa-check-square-o"></span>
+                <button id="see-live-btn" class="btn see-live-btn">
+                See Life<span class="fa fa-check-square-o"></span>
                 </button>
-                <button id="source-btn" class="btn">
-                  See Source<span class="fa fa-github"></span>
+                <button class="btn source-btn">
+                See Source<span class="fa fa-github"></span>
                 </button>
               </div>
             </div>
             <ul class="techs-used"></ul>
             <p class="details-para"></p>
             <div class="project-btns-forMob">
-              <button id="see-live-btn" class="btn">
+              <button id="see-live-btn" class="btn see-live-btn">
                 See Live<span class="fa fa-check-square-o"></span>
               </button>
-              <button id="source-btn" class="btn">
+              <button class="btn source-btn">
                 See Source<span class="fa fa-github"></span>
               </button>
             </div>
