Fix linters errors #1

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
               <h4 class="popup-title"></h4>
               <div class="project-btns">
                 <button id="see-live-btn" class="btn see-live-btn">
-                See Life<span class="fa fa-check-square-o"></span>
+                  See Life<span class="fa fa-check-square-o"></span>
                 </button>
                 <button class="btn source-btn">
-                See Source<span class="fa fa-github"></span>
+                  See Source<span class="fa fa-github"></span>
                 </button>
               </div>
             </div>
@@ -136,18 +136,15 @@
           method="post"
           action="https://formspree.io/f/mayknqrv"
           class="contact-container"
-          novalidate>
+          novalidate
+        >
           <h3 class="sectionTitle">
             I'm always interested in hearing about new projects, so if you'd
             like to chat please get in touch.
           </h3>
           <ul class="fields">
             <li>
-              <input
-                class="full-name"
-                placeholder="Full Name"
-                type="text"
-              />
+              <input class="full-name" placeholder="Full Name" type="text" />
             </li>
             <li>
               <input
