Add live demo to readme.md file

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <h4 class="popup-title"></h4>
               <div class="project-btns">
                 <button id="see-live-btn" class="btn see-live-btn">
-                  See Life<span class="fa fa-check-square-o"></span>
+                  See Live<span class="fa fa-check-square-o"></span>
                 </button>
                 <button class="btn source-btn">
                   See Source<span class="fa fa-github"></span>
