--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
               <h2 class="cardTitle">Frameworks</h2>
               <ul class="list">
                 <li class="listItem">Bootstrap</li>
+                <li class="listItem">React</li>
+                <li class="listItem">React Native</li>
                 <li class="listItem">Ruby on rails</li>
                 <li class="listItem">RSpec</li>
                 <li class="listItem">Capybara</li>
